--- a/FrontEndtesting/Main front end/index.html
+++ b/FrontEndtesting/Main front end/index.html
@@ -430,6 +430,7 @@
                                 <button class="strand_btn style_button">3</button>
                                 <button class="strand_btn style_button">4</button>
                                 <button class="strand_btn style_button">5</button>
+                                <button class="strand_btn style_button">6</button>
                             </div>
                         </div>
                         <div class="style_sub_row">
@@ -452,7 +453,51 @@
                                     <div class="color_list_square"></div>
                                     <div class="color_list_name">BLACK</div>
                                 </div>
-                                <button class="style_button color_change_btn">Change Color</button>
+                            </div>
+                        </div>
+                        <div class="style_sub_row">
+                            <div class="style_sub_row_header">Color 2</div>
+                            <div class="style_sub_row_content">
+                                <div class="color_selected_box">
+                                    <div class="color_list_square"></div>
+                                    <div class="color_list_name">BLACK</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="style_sub_row">
+                            <div class="style_sub_row_header">Color 3</div>
+                            <div class="style_sub_row_content">
+                                <div class="color_selected_box">
+                                    <div class="color_list_square"></div>
+                                    <div class="color_list_name">BLACK</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="style_sub_row">
+                            <div class="style_sub_row_header">Color 4</div>
+                            <div class="style_sub_row_content">
+                                <div class="color_selected_box">
+                                    <div class="color_list_square"></div>
+                                    <div class="color_list_name">BLACK</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="style_sub_row">
+                            <div class="style_sub_row_header">Color 5</div>
+                            <div class="style_sub_row_content">
+                                <div class="color_selected_box">
+                                    <div class="color_list_square"></div>
+                                    <div class="color_list_name">BLACK</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="style_sub_row">
+                            <div class="style_sub_row_header">Color 6</div>
+                            <div class="style_sub_row_content">
+                                <div class="color_selected_box">
+                                    <div class="color_list_square"></div>
+                                    <div class="color_list_name">BLACK</div>
+                                </div>
                             </div>
                         </div>
                     </div>
