--- a/FrontEndtesting/Main front end/index.html
+++ b/FrontEndtesting/Main front end/index.html
@@ -425,12 +425,12 @@
                         <div class="style_sub_row">
                             <div class="style_sub_row_header">Strands</div>
                             <div class="strands_btn_wrapper style_sub_row_content">
-                                <button class="strand_btn style_button">1</button>
-                                <button class="strand_btn style_button">2</button>
-                                <button class="strand_btn style_button">3</button>
-                                <button class="strand_btn style_button">4</button>
-                                <button class="strand_btn style_button">5</button>
-                                <button class="strand_btn style_button">6</button>
+                                <button class="strand_btn style_button" data-strand_num="1" data-Bconfig="0">1</button>
+                                <button class="strand_btn style_button" data-strand_num="2">2</button>
+                                <button class="strand_btn style_button active" data-strand_num="3">3</button>
+                                <button class="strand_btn style_button" data-strand_num="4">4</button>
+                                <button class="strand_btn style_button" data-strand_num="5">5</button>
+                                <button class="strand_btn style_button" data-strand_num="6">6</button>
                             </div>
                         </div>
                         <div class="style_sub_row">
@@ -446,7 +446,7 @@
                                 <button class="style_button select_btn">Round Braid</button>
                             </div>
                         </div>
-                        <div class="style_sub_row">
+                        <div class="style_sub_row" data-color_picker="1">
                             <div class="style_sub_row_header">Color 1</div>
                             <div class="style_sub_row_content">
                                 <div class="color_selected_box">
@@ -455,7 +455,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="style_sub_row">
+                        <div class="style_sub_row" data-color_picker="2">
                             <div class="style_sub_row_header">Color 2</div>
                             <div class="style_sub_row_content">
                                 <div class="color_selected_box">
@@ -464,7 +464,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="style_sub_row">
+                        <div class="style_sub_row" data-color_picker="3">
                             <div class="style_sub_row_header">Color 3</div>
                             <div class="style_sub_row_content">
                                 <div class="color_selected_box">
@@ -473,7 +473,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="style_sub_row">
+                        <div class="style_sub_row" data-color_picker="4">
                             <div class="style_sub_row_header">Color 4</div>
                             <div class="style_sub_row_content">
                                 <div class="color_selected_box">
@@ -482,7 +482,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="style_sub_row">
+                        <div class="style_sub_row" data-color_picker="5">
                             <div class="style_sub_row_header">Color 5</div>
                             <div class="style_sub_row_content">
                                 <div class="color_selected_box">
@@ -491,7 +491,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="style_sub_row">
+                        <div class="style_sub_row" data-color_picker="6">
                             <div class="style_sub_row_header">Color 6</div>
                             <div class="style_sub_row_content">
                                 <div class="color_selected_box">
