--- a/FrontEndtesting/Main front end/index.html
+++ b/FrontEndtesting/Main front end/index.html
@@ -421,11 +421,93 @@
                 </div>
                 <div class="style_container">
                     <div class="style_container_header">Cable Pattern And Colors</div>
-                    <div class="style_row border_top" data-pattern-row="total">
+                    <div class="style_row border_top new_hide" data-pattern-row="sec1">
+                        <div class="style_row_header">Output Colors</div>
                         <div class="style_sub_row">
                             <div class="style_sub_row_header">Strands</div>
                             <div class="strands_btn_wrapper style_sub_row_content">
-                                <button class="strand_btn style_button" data-strand_num="1" data-Bconfig="0">1</button>
+                                <button class="strand_btn style_button" data-strand_num="1">1</button>
+                                <button class="strand_btn style_button active" data-strand_num="2">2</button>
+                                <button class="strand_btn style_button" data-strand_num="3">3</button>
+                                <button class="strand_btn style_button" data-strand_num="4">4</button>
+                                <button class="strand_btn style_button" data-strand_num="5">5</button>
+                                <button class="strand_btn style_button" data-strand_num="6">6</button>
+                            </div>
+                        </div>
+                        <div class="style_sub_row">
+                            <div class="style_sub_row_header">Material</div>
+                            <select name="na" id="na" class="style_sub_row_content style_drop">
+                                <option value="Paracord">Paracord</option>
+                            </select>
+                        </div>
+                        <div class="style_sub_row">
+                            <div class="style_sub_row_header">Pattern</div>
+                            <div class="style_sub_row_content">
+                                <button class="style_button select_btn">Flat Braid</button>
+                                <button class="style_button select_btn">Round Braid</button>
+                            </div>
+                        </div>
+                        <div class="style_sub_row" data-color_picker="1">
+                            <div class="style_sub_row_header">Color 1</div>
+                            <div class="style_sub_row_content">
+                                <div class="color_selected_box">
+                                    <div class="color_list_square"></div>
+                                    <div class="color_list_name">BLACK</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="style_sub_row" data-color_picker="2">
+                            <div class="style_sub_row_header">Color 2</div>
+                            <div class="style_sub_row_content">
+                                <div class="color_selected_box">
+                                    <div class="color_list_square"></div>
+                                    <div class="color_list_name">BLACK</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="style_sub_row new_hide" data-color_picker="3">
+                            <div class="style_sub_row_header">Color 3</div>
+                            <div class="style_sub_row_content">
+                                <div class="color_selected_box">
+                                    <div class="color_list_square"></div>
+                                    <div class="color_list_name">BLACK</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="style_sub_row new_hide" data-color_picker="4">
+                            <div class="style_sub_row_header">Color 4</div>
+                            <div class="style_sub_row_content">
+                                <div class="color_selected_box">
+                                    <div class="color_list_square"></div>
+                                    <div class="color_list_name">BLACK</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="style_sub_row new_hide" data-color_picker="5">
+                            <div class="style_sub_row_header">Color 5</div>
+                            <div class="style_sub_row_content">
+                                <div class="color_selected_box">
+                                    <div class="color_list_square"></div>
+                                    <div class="color_list_name">BLACK</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="style_sub_row new_hide" data-color_picker="6">
+                            <div class="style_sub_row_header">Color 6</div>
+                            <div class="style_sub_row_content">
+                                <div class="color_selected_box">
+                                    <div class="color_list_square"></div>
+                                    <div class="color_list_name">BLACK</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="style_row border_top" data-pattern-row="sec2">
+                        <div class="style_row_header" data-pattern-header>Center Colors</div>
+                        <div class="style_sub_row">
+                            <div class="style_sub_row_header">Strands</div>
+                            <div class="strands_btn_wrapper style_sub_row_content">
+                                <button class="strand_btn style_button" data-strand_num="1">1</button>
                                 <button class="strand_btn style_button" data-strand_num="2">2</button>
                                 <button class="strand_btn style_button active" data-strand_num="3">3</button>
                                 <button class="strand_btn style_button" data-strand_num="4">4</button>
@@ -473,7 +555,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="style_sub_row" data-color_picker="4">
+                        <div class="style_sub_row new_hide" data-color_picker="4">
                             <div class="style_sub_row_header">Color 4</div>
                             <div class="style_sub_row_content">
                                 <div class="color_selected_box">
@@ -482,7 +564,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="style_sub_row" data-color_picker="5">
+                        <div class="style_sub_row new_hide" data-color_picker="5">
                             <div class="style_sub_row_header">Color 5</div>
                             <div class="style_sub_row_content">
                                 <div class="color_selected_box">
@@ -491,7 +573,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="style_sub_row" data-color_picker="6">
+                        <div class="style_sub_row new_hide" data-color_picker="6">
                             <div class="style_sub_row_header">Color 6</div>
                             <div class="style_sub_row_content">
                                 <div class="color_selected_box">
@@ -501,19 +583,85 @@
                             </div>
                         </div>
                     </div>
-                    <div class="style_row border_top" data-style-row="output">
-                        <div>
-
+                    <div class="style_row border_top new_hide" data-pattern-row="sec3">
+                        <div class="style_row_header">Input Colors</div>
+                        <div class="style_sub_row">
+                            <div class="style_sub_row_header">Strands</div>
+                            <div class="strands_btn_wrapper style_sub_row_content">
+                                <button class="strand_btn style_button" data-strand_num="1">1</button>
+                                <button class="strand_btn style_button active" data-strand_num="2">2</button>
+                                <button class="strand_btn style_button" data-strand_num="3">3</button>
+                                <button class="strand_btn style_button" data-strand_num="4">4</button>
+                                <button class="strand_btn style_button" data-strand_num="5">5</button>
+                                <button class="strand_btn style_button" data-strand_num="6">6</button>
+                            </div>
                         </div>
-                    </div>
-                    <div class="style_row border_top" data-style-row="center">
-                        <div>
-
+                        <div class="style_sub_row">
+                            <div class="style_sub_row_header">Material</div>
+                            <select name="na" id="na" class="style_sub_row_content style_drop">
+                                <option value="Paracord">Paracord</option>
+                            </select>
                         </div>
-                    </div>
-                    <div class="style_row border_top" data-style-row="input">
-                        <div>
-
+                        <div class="style_sub_row">
+                            <div class="style_sub_row_header">Pattern</div>
+                            <div class="style_sub_row_content">
+                                <button class="style_button select_btn">Flat Braid</button>
+                                <button class="style_button select_btn">Round Braid</button>
+                            </div>
+                        </div>
+                        <div class="style_sub_row" data-color_picker="1">
+                            <div class="style_sub_row_header">Color 1</div>
+                            <div class="style_sub_row_content">
+                                <div class="color_selected_box">
+                                    <div class="color_list_square"></div>
+                                    <div class="color_list_name">BLACK</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="style_sub_row" data-color_picker="2">
+                            <div class="style_sub_row_header">Color 2</div>
+                            <div class="style_sub_row_content">
+                                <div class="color_selected_box">
+                                    <div class="color_list_square"></div>
+                                    <div class="color_list_name">BLACK</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="style_sub_row new_hide" data-color_picker="3">
+                            <div class="style_sub_row_header">Color 3</div>
+                            <div class="style_sub_row_content">
+                                <div class="color_selected_box">
+                                    <div class="color_list_square"></div>
+                                    <div class="color_list_name">BLACK</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="style_sub_row new_hide" data-color_picker="4">
+                            <div class="style_sub_row_header">Color 4</div>
+                            <div class="style_sub_row_content">
+                                <div class="color_selected_box">
+                                    <div class="color_list_square"></div>
+                                    <div class="color_list_name">BLACK</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="style_sub_row new_hide" data-color_picker="5">
+                            <div class="style_sub_row_header">Color 5</div>
+                            <div class="style_sub_row_content">
+                                <div class="color_selected_box">
+                                    <div class="color_list_square"></div>
+                                    <div class="color_list_name">BLACK</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="style_sub_row new_hide" data-color_picker="6">
+                            <div class="style_sub_row_header">Color 6</div>
+                            <div class="style_sub_row_content">
+                                <div class="color_selected_box">
+                                    <div class="color_list_square"></div>
+                                    <div class="color_list_name">BLACK</div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
