--- a/FrontEndtesting/Main front end/index.html
+++ b/FrontEndtesting/Main front end/index.html
@@ -113,7 +113,7 @@
                             <p class="bubble_id_text">Output A</p>
                             <img class="bubble_img" src="" alt="" data-bubble-image="output_a">
                         </span>
-                        <div class="bubble_details hidden" data-bubble-connectorid="" data-bubble-detail="output_a">Details</div>
+                        <div class="bubble_details hidden" data-bubble-connectorid="none" data-bubble-detail="output_a">Details</div>
                     </div>
 
                     <div class="main_bubble_container io_hidden" data-bubble-container="output_b">
@@ -122,7 +122,7 @@
                             <p class="bubble_id_text">Output B</p>
                             <img class="bubble_img" src="" alt="" data-bubble-image="output_b">
                         </span>
-                        <div class="bubble_details hidden" data-bubble-connectorid="" data-bubble-detail="output_b">Details</div>
+                        <div class="bubble_details hidden" data-bubble-connectorid="none" data-bubble-detail="output_b">Details</div>
                     </div>
                     
                 </div>
@@ -311,7 +311,7 @@
                             <p class="bubble_id_text">Input A</p>
                             <img class="bubble_img" src="" alt="" data-bubble-image="input_a">
                         </span>
-                        <div class="bubble_details hidden" data-bubble-connectorid="" data-bubble-detail="input_a">Details</Details></div>
+                        <div class="bubble_details hidden" data-bubble-connectorid="none" data-bubble-detail="input_a">Details</Details></div>
                     </div>
 
                     <div class="main_bubble_container io_hidden" data-bubble-container="input_b">
@@ -320,7 +320,7 @@
                             <p class="bubble_id_text">Input B</p>
                             <img class="bubble_img" src="" alt="" data-bubble-image="input_b">
                         </span>
-                        <div class="bubble_details hidden" data-bubble-connectorid="" data-bubble-detail="input_b">Details</div>
+                        <div class="bubble_details hidden" data-bubble-connectorid="none" data-bubble-detail="input_b">Details</div>
                     </div>
                 </div>
 
@@ -515,7 +515,7 @@
                                 <button class="strand_btn style_button" data-strand_num="6">6</button>
                             </div>
                         </div>
-                        <div class="style_sub_row">
+                        <div class="style_sub_row new_hide">
                             <div class="style_sub_row_header">Material</div>
                             <select name="na" id="na" class="style_sub_row_content style_drop">
                                 <option value="Paracord">Paracord</option>
@@ -675,6 +675,6 @@
             </div>
         </div>
     </div>
-    <script type="module" src="script.js"></script>
+    <script type="module" src="./script.js"></script>
 </body>
 </html>
