--- a/FrontEndtesting/Main front end/index.html
+++ b/FrontEndtesting/Main front end/index.html
@@ -426,15 +426,15 @@
                         <div class="style_sub_row">
                             <div class="style_sub_row_header">Strands</div>
                             <div class="strands_btn_wrapper style_sub_row_content">
-                                <button class="strand_btn style_button" data-strand_num="1">1</button>
-                                <button class="strand_btn style_button active" data-strand_num="2">2</button>
-                                <button class="strand_btn style_button" data-strand_num="3">3</button>
-                                <button class="strand_btn style_button" data-strand_num="4">4</button>
-                                <button class="strand_btn style_button" data-strand_num="5">5</button>
-                                <button class="strand_btn style_button" data-strand_num="6">6</button>
+                                <button class="strand_btn style_button" data-strand_num="strand_1">1</button>
+                                <button class="strand_btn style_button active_red" data-strand_num="strand_2">2</button>
+                                <button class="strand_btn style_button" data-strand_num="strand_3">3</button>
+                                <button class="strand_btn style_button" data-strand_num="strand_4">4</button>
+                                <button class="strand_btn style_button" data-strand_num="strand_5">5</button>
+                                <button class="strand_btn style_button" data-strand_num="strand_6">6</button>
                             </div>
                         </div>
-                        <div class="style_sub_row">
+                        <div class="style_sub_row new_hide">
                             <div class="style_sub_row_header">Material</div>
                             <select name="na" id="na" class="style_sub_row_content style_drop">
                                 <option value="Paracord">Paracord</option>
@@ -443,8 +443,8 @@
                         <div class="style_sub_row">
                             <div class="style_sub_row_header">Pattern</div>
                             <div class="style_sub_row_content">
-                                <button class="style_button select_btn">Flat Braid</button>
-                                <button class="style_button select_btn">Round Braid</button>
+                                <button class="style_button select_btn" data-pattern-btn="flat">Flat Braid</button>
+                                <button class="style_button select_btn" data-pattern-btn="round">Round Braid</button>
                             </div>
                         </div>
                         <div class="style_sub_row" data-color_picker="1">
@@ -507,12 +507,12 @@
                         <div class="style_sub_row">
                             <div class="style_sub_row_header">Strands</div>
                             <div class="strands_btn_wrapper style_sub_row_content">
-                                <button class="strand_btn style_button" data-strand_num="1">1</button>
-                                <button class="strand_btn style_button" data-strand_num="2">2</button>
-                                <button class="strand_btn style_button active" data-strand_num="3">3</button>
-                                <button class="strand_btn style_button" data-strand_num="4">4</button>
-                                <button class="strand_btn style_button" data-strand_num="5">5</button>
-                                <button class="strand_btn style_button" data-strand_num="6">6</button>
+                                <button class="strand_btn style_button" data-strand_num="strand_1">1</button>
+                                <button class="strand_btn style_button" data-strand_num="strand_2">2</button>
+                                <button class="strand_btn style_button active_red" data-strand_num="strand_3">3</button>
+                                <button class="strand_btn style_button" data-strand_num="strand_4">4</button>
+                                <button class="strand_btn style_button" data-strand_num="strand_5">5</button>
+                                <button class="strand_btn style_button" data-strand_num="strand_6">6</button>
                             </div>
                         </div>
                         <div class="style_sub_row new_hide">
@@ -524,8 +524,8 @@
                         <div class="style_sub_row">
                             <div class="style_sub_row_header">Pattern</div>
                             <div class="style_sub_row_content">
-                                <button class="style_button select_btn">Flat Braid</button>
-                                <button class="style_button select_btn">Round Braid</button>
+                                <button class="style_button select_btn" data-pattern-btn="flat">Flat Braid</button>
+                                <button class="style_button select_btn" data-pattern-btn="round">Round Braid</button>
                             </div>
                         </div>
                         <div class="style_sub_row" data-color_picker="1">
@@ -588,15 +588,15 @@
                         <div class="style_sub_row">
                             <div class="style_sub_row_header">Strands</div>
                             <div class="strands_btn_wrapper style_sub_row_content">
-                                <button class="strand_btn style_button" data-strand_num="1">1</button>
-                                <button class="strand_btn style_button active" data-strand_num="2">2</button>
-                                <button class="strand_btn style_button" data-strand_num="3">3</button>
-                                <button class="strand_btn style_button" data-strand_num="4">4</button>
-                                <button class="strand_btn style_button" data-strand_num="5">5</button>
-                                <button class="strand_btn style_button" data-strand_num="6">6</button>
+                                <button class="strand_btn style_button" data-strand_num="strand_1">1</button>
+                                <button class="strand_btn style_button active_red" data-strand_num="strand_2">2</button>
+                                <button class="strand_btn style_button" data-strand_num="strand_3">3</button>
+                                <button class="strand_btn style_button" data-strand_num="strand_4">4</button>
+                                <button class="strand_btn style_button" data-strand_num="strand_5">5</button>
+                                <button class="strand_btn style_button" data-strand_num="strand_6">6</button>
                             </div>
                         </div>
-                        <div class="style_sub_row">
+                        <div class="style_sub_row new_hide">
                             <div class="style_sub_row_header">Material</div>
                             <select name="na" id="na" class="style_sub_row_content style_drop">
                                 <option value="Paracord">Paracord</option>
@@ -605,8 +605,8 @@
                         <div class="style_sub_row">
                             <div class="style_sub_row_header">Pattern</div>
                             <div class="style_sub_row_content">
-                                <button class="style_button select_btn">Flat Braid</button>
-                                <button class="style_button select_btn">Round Braid</button>
+                                <button class="style_button select_btn" data-pattern-btn="flat">Flat Braid</button>
+                                <button class="style_button select_btn" data-pattern-btn="round">Round Braid</button>
                             </div>
                         </div>
                         <div class="style_sub_row" data-color_picker="1">
