--- a/FrontEndtesting/templates.html
+++ b/FrontEndtesting/templates.html
@@ -16,11 +16,26 @@
         background-color: purple;
         border: 2px solid red;
         border-radius: 25px;
+        display: flex;
+        flex-direction: column;
+        gap: 1vh;
+        padding: 8px;;
+    }
+    .container{
+        background-color: white;
+        border: 2px dashed gray;
+        width: 100%;
+        box-sizing: border-box;
+        border-radius: 20px;
+        text-align: center;
+    }
+    .header{
+        color: red;
     }
     
 </style>
 <body>
-    <div class="workspace">
+    <div class="workspace" id="top">
         <template id="temp_1">
             <div class="container" data-cont>
                 <h2 class="header" data-header>Header</h2>
@@ -29,14 +44,44 @@
         </template>
     </div>
     <script>
+        const array = ["top", "middle", "bottom", "stuff"];
+
+        const obj = {
+            container_1: {header: "TOP", stuff: "---top stuff---", data: 1},
+            container_2: {header: "MIDDLE", stuff: "---middle stuff---", data: 2},
+            container_3: {header: "BOTTOM", stuff: "---bottom stuff---", data: 3}
+        }
+
         document.addEventListener('DOMContentLoaded',function(e){
             // console.log(this);
-            const temp = document.getElementById("temp_1");
-            const content = temp.content.cloneNode(true);
-            console.log(content);
-            const container = content.querySelector("[data-cont]");
-            console.log(container);
-            const container_data = content
+
+            for (arrayItem in obj){
+                const temp = document.getElementById("temp_1");
+                const content = temp.content.cloneNode(true);
+                const container = content.querySelector("[data-cont]");
+                container.setAttribute("data-cont",arrayItem.data);
+
+                const header  = content.querySelector("[]")
+                header.innerHTML  =  arrayItem.header;
+
+                const stuff = content.getElementsByClassName("stuff");
+                stuff.innerHTML = arrayItem.stuff;
+
+                const workspace = document.getElementById("top");
+                // workspace.appendChild(content);
+
+                console.log(container);
+            }
+            // for (let i = 0; i <=  3; i++){
+            //     const temp = document.getElementById("temp_1");
+            //     const content = temp.content.cloneNode(true);
+            //     console.log(content);
+            //     const container = content.querySelector("[data-cont]");
+            //     container.setAttribute("data-cont",i);
+            //     console.log(container);
+            //     const workspace = document.getElementById("top");
+            //     workspace.appendChild(content);
+            // };       
         })
     </script>
 </body>
