--- a/FrontEndtesting/Main front end/index.html
+++ b/FrontEndtesting/Main front end/index.html
@@ -40,7 +40,24 @@
                     </label>
                 </div>
             </div>
-            <div class="connetor_results_container">
+            <div class="connetor_results_container" id="connector_results">
+                <template id="conenctor_template">
+                    <div class="connector_cell_container" data-cell-cid="">
+                        <div class="connector_cell_type_1">
+                            <img draggable="false" src="" alt="imgage not found" data-cell-image>
+                            <div class="cell_text_type_1">
+                                <p>Category: <span data-cell-category data-temp-target></span></p>
+                                <p>Name: <span data-cell-name data-temp-target></span></p>
+                                <p>Size: <span data-cell-size data-temp-target></span></p>
+                                <p>Pins: <span data-cell-pins data-temp-target></span></p>
+                                <p>Gender: <span data-cell-gender data-temp-target></span></p>
+                            </div>
+                        </div>
+                        <div class="connector_cell_more_options">
+                            <button type="button" data-cell-insert>Add connector to cable</button>
+                        </div>
+                    </div>
+                </template>
                 <div class="connector_cell_container">
                     <div class="connector_cell_type_1">
                         <img draggable="false" src="img/TRS-6.35mm-3_Pole-male-side_view.svg" alt="" data-cell-image="cid_1">
