--- a/FrontEndtesting/Main front end/index.html
+++ b/FrontEndtesting/Main front end/index.html
@@ -58,7 +58,7 @@
                         </div>
                     </div>
                 </template>
-                <div class="connector_cell_container">
+                <!-- <div class="connector_cell_container">
                     <div class="connector_cell_type_1">
                         <img draggable="false" src="img/TRS-6.35mm-3_Pole-male-side_view.svg" alt="" data-cell-image="cid_1">
                         <div class="cell_text_type_1">
@@ -117,7 +117,7 @@
                     <div class="connector_cell_more_options">
                         <button type="button" data-cell-insert="cid_4">Add connector to cable</button>
                     </div>
-                </div>
+                </div> -->
             </div>                          
         </div>
         <div class="cable_editor_container">
